--- a/src/Restman.Winform/Restman.Winform.csproj
+++ b/src/Restman.Winform/Restman.Winform.csproj
@@ -9,7 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10370" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00968" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Restman.Application\Restman.Application.csproj" />
   </ItemGroup>
 
 </Project>
