Refactored code and applied MVP pattern to allow unit testing in later stages.

--- a/src/Restman.Application/Restman.Application.csproj
+++ b/src/Restman.Application/Restman.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\Abstractions\**" />
+    <EmbeddedResource Remove="Common\Abstractions\**" />
+    <None Remove="Common\Abstractions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.3.0" />
     <PackageReference Include="FluentValidation" Version="11.8.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
@@ -14,10 +20,6 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common\Abstractions\" />
   </ItemGroup>
 
 </Project>
