--- a/src/Restman.Winform/Restman.Winform.csproj
+++ b/src/Restman.Winform/Restman.Winform.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.1-dev-10370" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00968" />
+    <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
   <ItemGroup>
