Update UI thread safe by invoking if required. WIP yaml configuration

--- a/src/Restman.Winform/Restman.Winform.csproj
+++ b/src/Restman.Winform/Restman.Winform.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\Restman.Application\Restman.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\collections.yml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
