--- a/src/Restman.Winform/Resources/collections.yml
+++ b/src/Restman.Winform/Resources/collections.yml
@@ -21,8 +21,12 @@
   - name: Get Users With Delay
     description: Gets all users from API with 3 seconds delay
     method: GET
-    end-url: /api/users?delay=3
-    headers: 
+    end-url: /api/users
+    query-params:
+      - key: delay
+        value: 3
+        enable: true
+    headers:
     json-content: 
   - name: Get Single User
     description: Gets a single user by id
