added ssl configuration and support, appsettings.json support

--- a/src/Restman.Winform/Resources/collections.yml
+++ b/src/Restman.Winform/Resources/collections.yml
@@ -1,4 +1,5 @@
-- name: Reqres
+- id: Reqres
+  name: Reqres
   base-url: https://reqres.in
   description: A sample api for testing
   default-headers:
